[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yieldflow"
version = "0.1.1"
description = "Simple library for building multi-threaded data processing pipelines, streaming results between steps."
authors = [
    { name = "Freddy Snijder", email = "freddy@visionscapers.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "visionscaper-pybase"
]
